monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4120/A4120.mc4
/* (c) https://github.com/MontiCore/monticore */
package de.monticore.grammar.cocos.invalid.A4120;

grammar A4120 {

  A = "foo";

  ABuilder = "bar";

}